[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://fps/player.gd" id="1_qhbqk"]
[ext_resource type="Script" path="res://addons/inventory-system/core/inventory_handler.gd" id="2_0npow"]
[ext_resource type="Script" path="res://addons/inventory-system/core/hand_item_3d.gd" id="2_fyps8"]
[ext_resource type="Resource" uid="uid://x5huasdaljjl" path="res://base/database.tres" id="4_11r5y"]
[ext_resource type="Script" path="res://addons/inventory-system/core/inventory.gd" id="4_cio1o"]
[ext_resource type="Script" path="res://addons/inventory-system/core/hotbar.gd" id="5_dm6kt"]
[ext_resource type="AudioStream" uid="uid://n8yvnoax543q" path="res://assets/kenney_rpgaudio/Audio/cloth4.ogg" id="5_sfhca"]
[ext_resource type="AudioStream" uid="uid://chgg2p17if5mo" path="res://assets/kenney_rpgaudio/Audio/dropLeather.ogg" id="6_dxfus"]
[ext_resource type="Script" path="res://addons/inventory-system/craft/crafter.gd" id="7_30xoc"]
[ext_resource type="AudioStream" uid="uid://djoihrfwojghx" path="res://assets/kenney_rpgaudio/Audio/bookOpen.ogg" id="7_jxmrf"]
[ext_resource type="Script" path="res://addons/inventory-system/craft/craft_station.gd" id="8_3m0xp"]
[ext_resource type="AudioStream" uid="uid://cyu1f4p35abbj" path="res://assets/kenney_rpgaudio/Audio/bookClose.ogg" id="8_ckf1g"]
[ext_resource type="AudioStream" uid="uid://df1ibxkrver3m" path="res://assets/kenney_rpgaudio/Audio/metalClick.ogg" id="8_oba2k"]


[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ccrms"]

[sub_resource type="BoxMesh" id="BoxMesh_d1alo"]
size = Vector3(0.125, 0.125, 0.125)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
script = ExtResource("1_qhbqk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ccrms")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.396227, 0)
current = true

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 16

[node name="HandItem" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.232194, -0.16177, -0.382065)
script = ExtResource("2_fyps8")
hotbar_path = NodePath("../../InventoryHandler/Hotbar")

[node name="DefaultHandItem" type="MeshInstance3D" parent="Camera3D/HandItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.103376, 0, 0.154242)
mesh = SubResource("BoxMesh_d1alo")

[node name="InventoryHandler" type="Node" parent="."]
script = ExtResource("2_0npow")
database = ExtResource("4_11r5y")

[node name="Inventory" type="Node" parent="InventoryHandler"]
script = ExtResource("4_cio1o")
slot_amount = 32
inventory_name = "Player Inventory"
database = ExtResource("4_11r5y")

[node name="Hotbar" type="Node" parent="InventoryHandler" node_paths=PackedStringArray("inventory")]
script = ExtResource("5_dm6kt")
inventory = NodePath("../Inventory")
database = ExtResource("4_11r5y")

[node name="Crafter" type="Node" parent="." node_paths=PackedStringArray("main_station")]
script = ExtResource("7_30xoc")
main_station = NodePath("CraftStation")
database = ExtResource("4_11r5y")

[node name="CraftStation" type="Node" parent="Crafter" node_paths=PackedStringArray("input_inventory", "output_inventory")]
script = ExtResource("8_3m0xp")
input_inventory = NodePath("../../InventoryHandler/Inventory")
output_inventory = NodePath("../../InventoryHandler/Inventory")
database = ExtResource("4_11r5y")

[node name="Pickup" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_sfhca")

[node name="Drop" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_dxfus")

[node name="HotbarChange" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_oba2k")

[node name="PlayerInventoryOpen" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_jxmrf")

[node name="PlayerInventoryClose" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_ckf1g")

[connection signal="dropped" from="InventoryHandler" to="." method="_on_inventory_handler_dropped"]
[connection signal="picked" from="InventoryHandler" to="." method="_on_inventory_handler_picked"]
[connection signal="closed" from="InventoryHandler/Inventory" to="." method="_on_player_inventory_closed"]
[connection signal="opened" from="InventoryHandler/Inventory" to="." method="_on_player_inventory_opened"]
